--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -33,11 +33,6 @@ jobs:
 
     - name: Prepare
       run: |
-        echo "::group::Markdown"
-        pip install markdown
-        pip install -U git+git://github.com/TylerTemp/md-video.git
-        echo "::endgroup::"
-
         echo "::group::Build dependencies"
         sudo apt-get update && sudo apt-get install -y --no-install-recommends \
           cmake \
@@ -88,11 +83,12 @@ jobs:
           fi
         done
 
-    - name: Generate HTML files
+    - name: Generate Markdown files
       run: |
-        render/html.sh
+        REPO=$(echo ${{ github.repository }} | cut -d/ -f2)
+        render/markdown.sh https://${{ github.repository_owner }}.github.io/${REPO}
         git add -A
-        git commit -m "Update: HTML files to reflect latest entries"
+        git commit -m "Update: Markdown files to reflect latest entries"
 
     - name: Push to GitHub
       run: |
