--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -88,7 +88,9 @@ jobs:
         REPO=$(echo ${{ github.repository }} | cut -d/ -f2)
         render/markdown.sh https://${{ github.repository_owner }}.github.io/${REPO}
         git add -A
-        git commit -m "Update: Markdown files to reflect latest entries"
+        if ! git diff --staged --quiet; then
+          git commit -m "Update: Markdown files to reflect latest entries"
+        fi
 
     - name: Push to GitHub
       run: |
